students/MorozEvgeniy/task_02/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-web15
  namespace: app15
  labels:
    app: web15
    org.bstu.student.fullname: "Moroz_Evgeniy_Vasilevich"
    org.bstu.student.id: "220019"
    org.bstu.group: "AC-63"
    org.bstu.variant: "15"
    org.bstu.course: "RSIOT"
    org.bstu.owner: "EugeneFr0st"
    org.bstu.student.slug: "as-63-220019-v15"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: web15
  template:
    metadata:
      labels:
        app: web15
        org.bstu.variant: "15"
    spec:
      containers:
        - name: web15
          image: eugenefrost/web15:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8063

          readinessProbe:
            httpGet:
              path: /ready
              port: 8063
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /live
              port: 8063
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
