students/MorozEvgeniy/task_02/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: app15
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
